Revert "Removed preview-features dependencies (moved to preview-features branch) so that the jar can be opened by double-click."
This reverts commit acb0b95bd424532917da016e944af930d7153fa5.