@@ -11,6 +11,15 @@
     <name>GC46</name>
     <url>https://www.github.com/darklamp/ing-sw-2020-Secondari-Vela-Villa</url>
 
+
+     <properties>
+       <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+       <maven.compiler.release>14</maven.compiler.release>
+       <maven.compiler.target>14</maven.compiler.target>
+       <argLine>--enable-preview</argLine>
+    </properties>
+
+
     <profiles>
         <profile>
             <id>multi</id>
@@ -182,6 +191,11 @@
                 <plugin>
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>3.8.1</version>
+                    <configuration>
+                        <source>14</source>
+                        <target>14</target>
+                        <compilerArgs>--enable-preview</compilerArgs>
+                    </configuration>
                 </plugin>
                 <plugin>
                     <artifactId>maven-surefire-plugin</artifactId>
